@@ -149,6 +149,8 @@ namespace InfoBoxFactory
 
     CIRCLE_DIAMETER,
 
+    TAKEOFF_DISTANCE,
+
     e_NUM_TYPES /* Last item */
   };
 
